# foo_cuefixer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  copy_and_pack.bat  create_solutions.bat  foo_cuefixer.sln
cmake/: FindFoobar2000.cmake
foo_cuefixer/: foo_cuefixer.cpp  foo_cuefixer.vcxproj  foo_cuefixer.vcxproj.filters  stdafx.h
foo_cuefixer/debug_libs/: foobar2000_component_client.lib  pfc.lib
foo_cuefixer/libs/: pfc.lib
src/: CMakeLists.txt  foo_cuefixer.cpp
